Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/Smart_KRA_Weightage__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Smart KRA Weightage</label>
</CustomObject>