Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Activation_Of_Direct_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Activation_Of_Direct_Dealer__c</fullName>
    <label>New Activation Of Direct Dealer - Column</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>