Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Activation_Of_Inactive_Distributor_Col__c.field-meta.xml
<CustomField>
    <fullName>Activation_Of_Inactive_Distributor_Col__c</fullName>
    <label>Activation Of Inactive Distributor - Col</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>