Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Adopted_Dealer_Weightage_value__c.field-meta.xml
<CustomField>
    <fullName>Adopted_Dealer_Weightage_value__c</fullName>
    <label>Adopted Dealer Weightage value</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>