Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Approvals_Orders_With_Top_Builders_Pro__c.field-meta.xml
<CustomField>
    <fullName>Approvals_Orders_With_Top_Builders_Pro__c</fullName>
    <label>Approvals &amp; Orders With Top Builders-Pro</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>