Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Bombarding_Column__c.field-meta.xml
<CustomField>
    <fullName>Bombarding_Column__c</fullName>
    <label>Bombarding - Column</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>