Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Bombarding_Weightage_Plumbing__c.field-meta.xml
<CustomField>
    <fullName>Bombarding_Weightage_Plumbing__c</fullName>
    <label>Bombarding Weightage - Plumbing</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>