Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Borewell_Operators_Column__c.field-meta.xml
<CustomField>
    <fullName>Borewell_Operators_Column__c</fullName>
    <label>Borewell Operators -Column</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>