Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Consultants_Builders_Events_Projects__c.field-meta.xml
<CustomField>
    <fullName>Consultants_Builders_Events_Projects__c</fullName>
    <label>Consultants / Builders Events - Projects</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>