Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Contact_visit_Plumbing_Plumber__c.field-meta.xml
<CustomField>
    <fullName>Contact_visit_Plumbing_Plumber__c</fullName>
    <inlineHelpText>WEIGHTAGE : Plumbing - Retailing # Contact Visit Plumbers</inlineHelpText>
    <label>Contact visit Plumbing (Plumber)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>