Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Contacts_Visits_Column_FARMERS__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Visits_Column_FARMERS__c</fullName>
    <label>Contacts Visits - Column(FARMERS)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>