Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Dealer_salesmen_training_Plumbing__c.field-meta.xml
<CustomField>
    <fullName>Dealer_salesmen_training_Plumbing__c</fullName>
    <inlineHelpText>WEIGHTAGE : Plumbing - PROMOTIONAL ACTIVITY # Dealer salesmen training</inlineHelpText>
    <label>Dealer salesmen training - Plumbing</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>