Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Exhibitions_Column__c.field-meta.xml
<CustomField>
    <fullName>Exhibitions_Column__c</fullName>
    <label>Exhibitions - Column</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>