Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Exhibitions_Plumbing__c.field-meta.xml
<CustomField>
    <fullName>Exhibitions_Plumbing__c</fullName>
    <inlineHelpText>WEIGHTAGE : Plumbing - PROMOTIONAL ACTIVITY # Exhibitions</inlineHelpText>
    <label>Exhibitions - Plumbing</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>