Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Factory_Visits_Projects__c.field-meta.xml
<CustomField>
    <fullName>Factory_Visits_Projects__c</fullName>
    <label>Factory Visits - Projects</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>