Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Farmers_Panchayat_Head_Column__c.field-meta.xml
<CustomField>
    <fullName>Farmers_Panchayat_Head_Column__c</fullName>
    <label>Farmers / Panchayat Head - Column</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>