Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Influencer_visit_column_weightage_seed__c.field-meta.xml
<CustomField>
    <fullName>Influencer_visit_column_weightage_seed__c</fullName>
    <label>Influencer visit column weightage -seed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>