Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/ISP_Meets_Plumbing__c.field-meta.xml
<CustomField>
    <fullName>ISP_Meets_Plumbing__c</fullName>
    <inlineHelpText>WEIGHTAGE : Plumbing - PROMOTIONAL ACTIVITY # ISP Meets</inlineHelpText>
    <label>Mini Meets - Plumbing</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>