Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Key_influencers_contact_Plumbing__c.field-meta.xml
<CustomField>
    <fullName>Key_influencers_contact_Plumbing__c</fullName>
    <inlineHelpText>WEIGHTAGE : Plumbing - Key influencers contact( Arch/consultant)</inlineHelpText>
    <label>Key influencers contact Plumbing</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>