Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Mechanics_Winders_Column__c.field-meta.xml
<CustomField>
    <fullName>Mechanics_Winders_Column__c</fullName>
    <label>Mechanics / Winders - Column</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>