Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Mini_Farmers_Meet_Column__c.field-meta.xml
<CustomField>
    <fullName>Mini_Farmers_Meet_Column__c</fullName>
    <label>Mini Farmers Meet Column</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>