Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/New_Dealers_Activation_Plumbinh__c.field-meta.xml
<CustomField>
    <fullName>New_Dealers_Activation_Plumbinh__c</fullName>
    <label>New Dealers Activation - Plumbing</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>