Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/New_Direct_Dealer_To_Depot_Column__c.field-meta.xml
<CustomField>
    <fullName>New_Direct_Dealer_To_Depot_Column__c</fullName>
    <label>New Direct Dealer To Depot - Column</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>