Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/New_Distributor_Column__c.field-meta.xml
<CustomField>
    <fullName>New_Distributor_Column__c</fullName>
    <label>New Activation Of Distributor - Column</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>