Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/New_Markets_Opened_Plumbing__c.field-meta.xml
<CustomField>
    <fullName>New_Markets_Opened_Plumbing__c</fullName>
    <label>New Markets Opened - Plumbing</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>