Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/No_of_visits_Total_Visits_Column__c.field-meta.xml
<CustomField>
    <fullName>No_of_visits_Total_Visits_Column__c</fullName>
    <label>No of visits(Total Visits) - Column</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>