Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/No_of_visits_total_visits_Plumbing__c.field-meta.xml
<CustomField>
    <fullName>No_of_visits_total_visits_Plumbing__c</fullName>
    <inlineHelpText>WEIGHTAGE : Plumbing - No of visits</inlineHelpText>
    <label>No.of visits ( total visits) - Plumbing</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>