Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Onsite_Plumber_Meets_Projects__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Plumber_Meets_Projects__c</fullName>
    <label>Onsite Plumber Meets - Projects</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>