Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Orders_With_Single_Products_Projects__c.field-meta.xml
<CustomField>
    <fullName>Orders_With_Single_Products_Projects__c</fullName>
    <label>Orders With Single Products - Projects</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>