Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Primary_Sales_SWR__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_SWR__c</fullName>
    <label>Primary Sales -SWR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>