Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Project_Funnel_Projects__c.field-meta.xml
<CustomField>
    <fullName>Project_Funnel_Projects__c</fullName>
    <label>Project Funnel - Projects</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>