Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Project_Reference_PPT_Every_QTR_Projec__c.field-meta.xml
<CustomField>
    <fullName>Project_Reference_PPT_Every_QTR_Projec__c</fullName>
    <label>Project Reference PPT Every QTR - Projec</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>