Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Retail_Outlet_Activation_column_Growth__c.field-meta.xml
<CustomField>
    <fullName>Retail_Outlet_Activation_column_Growth__c</fullName>
    <label>Retail Outlet Activation-column-Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>