Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Retailing_Days_Field_Work_Column__c.field-meta.xml
<CustomField>
    <fullName>Retailing_Days_Field_Work_Column__c</fullName>
    <label>Retailing Days(Field Work) - Column</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>