Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Retailing_days_Plumbing_field_work__c.field-meta.xml
<CustomField>
    <fullName>Retailing_days_Plumbing_field_work__c</fullName>
    <inlineHelpText>WEIGHTAGE : Plumbing : Retailing days ( field work)</inlineHelpText>
    <label>Retailing days Plumbing ( field work)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>