Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Secondary_Sales_Data_Collection_Column__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Data_Collection_Column__c</fullName>
    <label>Secondary Sales Data Collection - Column</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>