Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Secondary_Sales_In_Lacs_Plumbing__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_In_Lacs_Plumbing__c</fullName>
    <label>Secondary Sales (In Lacs) - Plumbing</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>