Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Secondary_Sales_Sparsh_column__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Sparsh_column__c</fullName>
    <label>Secondary Sales Sparsh(column)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>