Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Target_for_productive_visits_column__c.field-meta.xml
<CustomField>
    <fullName>Target_for_productive_visits_column__c</fullName>
    <label>Target for productive visits column</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>