Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Tractor_Show_Column_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Tractor_Show_Column_Weightage__c</fullName>
    <label>Tractor Show Column Weightage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>