Partial_14Dec2021/force-app/main/default/objects/Smart_KRA_Weightage__c/fields/Working_Days_Month_Projects__c.field-meta.xml
<CustomField>
    <fullName>Working_Days_Month_Projects__c</fullName>
    <label>Working Days / Month - Projects</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>